# sbr-rs

./: Cargo.toml  Dockerfile  README-SAAS.md  docker-compose.yml  k8s-deployment.yaml
docs/vi/: API-DOCUMENTATION.md  CẤU-TRÚC-DỰ-ÁN.md  KIẾN-TRÚC-HỆ-THỐNG.md
plan/: KẾ-HOẠCH-PHÁT-TRIỂN.md
src/: lib.rs  main.rs
src/api/: admin.rs  auth.rs  mod.rs  recommendations.rs
src/api/middleware/: auth.rs
src/database/: models.rs
src/database/migrations/: 001_initial.sql
src/database/repositories/: mod.rs  recommendation_repository.rs
src/llm/: mod.rs  vietnamese.rs
src/saas/: mod.rs  tenant.rs
