[package]
name = "sbr"
version = "0.5.0"
authors = ["Maciej Kula"]
license = "MIT"
description = "Recommender models."
repository = "https://github.com/maciejkula/sbr-rs"
documentation = "https://docs.rs/sbr/"
readme = "readme.md"
exclude = ["data.csv"]
edition = "2018"

[badges]
travis-ci = { repository = "maciejkula/sbr-rs", branch = "master" }

[dependencies]
serde = { version = "1.0", features = ["rc", "derive"] }
bincode = "1.3"
rand = { version = "0.8", features = ["serde1"] }
itertools = "0.12"
rayon = "1.8"
ndarray = { version = "0.15", features = ["serde-1"] }
siphasher = "0.3"
anyhow = "1.0"
reqwest = { version = "0.11", optional = true, features = ["json"] }
csv = { version = "1.3", optional = true }
dirs = { version = "5.0", optional = true }

# Keep the original wyrm for ML models (may need updating)
# wyrm = { version = "0.9.1", features = ["fast-math"]}

# New dependencies for LLM integration and SaaS features
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-decimal = { version = "1.32", features = ["serde-json"] }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.2.3"
ndarray = { version = "0.11.0", features = ["blas", "serde-1"] }
blas-src = { version = "0.1.2", default-features = false, features = ["intel-mkl"] }

[features]
default = ["csv", "reqwest", "dirs"]

[profile.release]
lto = true
rpath = true
debug = true

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
lto = true
debug = true
